force-app/main/default/objects/vlocity_ps__EventDuringInteraction__c/fields/vlocity_ps__EventType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__EventType__c</fullName>
    <label>Event Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>