force-app/main/default/objects/vlocity_ps__EventDuringInteraction__c/fields/vlocity_ps__NextEvent__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__NextEvent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Event</label>
    <referenceTo>vlocity_ps__EventDuringInteraction__c</referenceTo>
    <relationshipLabel>Events During Interaction</relationshipLabel>
    <relationshipName>Events_During_Interaction</relationshipName>
    <type>Lookup</type>
</CustomField>