force-app/main/default/objects/vlocity_ps__EventDuringInteraction__c/fields/vlocity_ps__TimeOfEvent__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TimeOfEvent__c</fullName>
    <label>Time Of Event</label>
    <type>DateTime</type>
</CustomField>