force-app/main/default/objects/vlocity_ps__EventDuringInteraction__c/fields/vlocity_ps__Value__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Value__c</fullName>
    <label>value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>